# rjauquet.github.io

./: CNAME  Pipfile  README.md  build.py  index.html  pyproject.toml  settings.py  urls.py  watch.py  wsgi.py
content/: base.html
content/content/: index.html
content/pages/: about.html  django-psql-fts.html  index.html  pycon-2018.html  writing-in-git.html
css/: rubyjacket.css
examples/search/: models.py
examples/search/migrations/: 0001_initial.py
js/: rubyjacket.js
pages/: base.html
pages/content/: about.html  index.html
