[tool.poetry]
name = "rjauquet.github.io"
version = "0.1.0"
description = ""
authors = ["Rob Ervin Jauquet <rob.jauquet@zapier.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=2.1"
psycopg2-binary = ">=2.7.4"

[tool.poetry.dev-dependencies]
watchdog = "==0.8.3"
django-extensions = ">=2.0.7"
ipython = ">=6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
