[tool.poetry]
name = "rjauquet.github.io"
version = "0.1.0"
description = ""
authors = ["Rob Ervin Jauquet <rob.jauquet@zapier.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
psycopg2-binary = ">=2.7.4"

[tool.poetry.dev-dependencies]
watchdog = "*"
django-extensions = ">=2.0.7"
ipython = "*"

[build-system]
requires = ["poetry>=1.3.0"]
build-backend = "poetry.masonry.api"
